# excc_cuda_miner

./: .gitignore  CMakeLists.txt  blake2b.cu  build.sh  equi.h  main.cpp  main.cu  prettyprint.hpp  solver.cuh  test.cuh  utils.hpp
cuda_djezo/: cuda_djezo.cpp  cuda_djezo.hpp  eqcuda.hpp  equi_miner.cu
cuda_tromp/: CMakeLists.txt  cuda_tromp.hpp  equi_miner.cu
eqcuda1445/: CMakeLists.txt  build.sh  eqcuda1445.cuh  install.sh  portable_endian.h  solver.cu  solver.cuh  solver_details.cuh
test/: benchmark.cuh  benchmark.hpp  test.cuh  test.hpp  test_data.hpp
